src/objects/Glxy_Reconciliation__c.object
<CustomObject>
    <description>This table contains snap shot of Lease data by month</description>
    <fields>
        <fullName>AnnualRent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Annual Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BuildingNumber__c</fullName>
        <label>Building Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPIAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CPI Monthly Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPILumpSum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CPI Lump Sum</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancelAnnualRentIA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cancel Annual Rent IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancelAnnualRentNOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cancel Annual Rent NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancelAnnualRent__c</fullName>
        <formula>CancelAnnualRentIA__c  +  CancelAnnualRentNOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancellation Monthly Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChangeInSFRent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Change in SF Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CurrentMonthGalaxy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Month Galaxy</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DelegatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delegated Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegated_Flag_Rep_lkp__c</fullName>
        <formula>IF(DelegatedFlag__c =true, &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegated Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpansionAnnualRentIA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expansion Annual Rent IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpansionAnnualRentNOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expansion Annual Rent NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FMISYearToDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD FMIS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FMIS_Obligation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FMIS Obligation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GalaxyFMISDifference__c</fullName>
        <formula>CurrentMonthGalaxy__c  -  FMIS_Obligation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Galaxy/FMIS Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GalaxyREXUSDifference__c</fullName>
        <formula>CurrentMonthGalaxy__c  -  RexusTotalMonthlyPayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Galaxy/REXUS Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeaseNumberMonth__c</fullName>
        <externalId>true</externalId>
        <label>Lease Number Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaseNumber__c</fullName>
        <label>Lease Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LumpSumTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Lump Sum = Lump Sum Amount + Rent Increase LS + CPI LS</description>
        <inlineHelpText>Total Lump Sum = Lump Sum Amount + Rent Increase LS + CPI LS</inlineHelpText>
        <label>Lump Sum Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LumpSumsAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lump Sums Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyRent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Monthly Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NextMonthRent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Next Month Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PegasysLeaseNumber__c</fullName>
        <label>Pegasys Lease Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REXUSFMISDifference__c</fullName>
        <formula>RexusTotalMonthlyPayment__c  -  FMIS_Obligation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REXUS/FMIS Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWAsAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>RWAs Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RegionCD__c</fullName>
        <label>Region Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RentDifference__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Escalation Monthly Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RentIncreaseLumpSum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rent Increase Lump Sum</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RexusBaseMonthPayment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rexus Base Month Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RexusExpirationDate__c</fullName>
        <label>Rexus Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RexusLeaseNumber__c</fullName>
        <label>Rexus Lease Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RexusLeaseStatusCode__c</fullName>
        <label>Rexus Lease Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>DL</fullName>
                </value>
                <value>
                    <fullName>PD</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RexusLumpSumsAnnualAmount__c</fullName>
        <label>Rexus LumpSums Annual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RexusReportEndDate__c</fullName>
        <label>Rexus Report End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RexusTerminationDate__c</fullName>
        <label>Rexus Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RexusTotalMonthlyPayment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rexus Total Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RexusWHDAmount__c</fullName>
        <label>Rexus WHD Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RexusYearToDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD Rexus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SRAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Step Rent Monthly Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SRLumpSum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Step Rent Lump Sum</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <description>Status Code</description>
        <inlineHelpText>DL Deleted
PD Pending
TM Terminated
AC Active</inlineHelpText>
        <label>Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LS-Tax Escalation</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TeamCode__c</fullName>
        <label>Team Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTDGalaxyFMISDifference__c</fullName>
        <formula>YearToDate__c  -  FMISYearToDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Galaxy/FMIS Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDGalaxyREXUSDifference__c</fullName>
        <formula>YearToDate__c -  RexusYearToDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Galaxy/REXUS Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDREXUSFMISDifference__c</fullName>
        <formula>RexusYearToDate__c  -  FMISYearToDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD REXUS/FMIS Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YearToDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD Galaxy</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Galaxy Reconciliation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Month__c</columns>
        <columns>LeaseNumber__c</columns>
        <columns>LeaseNumberMonth__c</columns>
        <columns>YearToDate__c</columns>
        <columns>CurrentMonthGalaxy__c</columns>
        <columns>NextMonthRent__c</columns>
        <columns>BuildingNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RE-{0000000000}</displayFormat>
        <label>Galaxy Reconciliation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Galaxy Reconciliation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>